# student-stress-predictor

./: .replit  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
ml_model/: ss_model.pkl  student_stress.pickle
static/css/: home.css  login.css  nav.css  signup.css
templates/: dashboard.html  footer.html  home.html  login.html  nav.html  signup.html
